--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,4 @@
 # See hack/generate-authors.sh to make modifications.
 
 Ogunrinde Motunrayo Deborah <motunrayo.ogunrinde@gmail.com>
+Westdev(Michael) Odemba <michmbah@gmail.com>
